ISPN-10855 MultipleCacheManagersTest factory issues are ignored